--- a/TopoApp/TopoApp/TopoApp.csproj
+++ b/TopoApp/TopoApp/TopoApp.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Moq" Version="4.14.7" />
+  </ItemGroup>
+
 </Project>
