--- a/TopoApp/TopoApp/TopoApp.csproj
+++ b/TopoApp/TopoApp/TopoApp.csproj
@@ -5,12 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.14.7" />
+    <PackageReference Include="NetTopologySuite.Core" Version="1.15.3" />
   </ItemGroup>
 
 </Project>
