--- a/TopoApp/TopoApp/TopoApp.csproj
+++ b/TopoApp/TopoApp/TopoApp.csproj
@@ -5,10 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="Moq" Version="4.14.7" />
     <PackageReference Include="NetTopologySuite.Core" Version="1.15.3" />
   </ItemGroup>
