--- a/TopoApp/TopoApp/TopoApp.csproj
+++ b/TopoApp/TopoApp/TopoApp.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="NetTopologySuite.Core" Version="1.15.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
 </Project>
