--- a/TopoApp/TopoApp/appsettings.json
+++ b/TopoApp/TopoApp/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Data": {
+    "ClimbingRoutes": {
+      "ConnectionString": "Data Source=TAXUS131\\SQLEXPRESS01;Initial Catalog=topoDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    }
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
